packages/yew-macro/tests/props_macro/resolve-prop-fail.stderr
error[E0277]: can't compare `Props` with `Props`
 --> tests/props_macro/resolve-prop-fail.rs:4:8
  |
4 | struct Props {}
  |        ^^^^^ no implementation for `Props == Props`
  |
  = help: the trait `PartialEq` is not implemented for `Props`
note: required by a bound in `yew::Properties`
 --> $WORKSPACE/packages/yew/src/html/component/properties.rs
  |
  | pub trait Properties: PartialEq {
  |                       ^^^^^^^^^ required by this bound in `Properties`
help: consider annotating `Props` with `#[derive(PartialEq)]`
  |
4 + #[derive(PartialEq)]
5 | struct Props {}
  |

error[E0277]: can't compare `Props` with `Props`
 --> tests/props_macro/resolve-prop-fail.rs:9:23
  |
9 |     type Properties = Props;
  |                       ^^^^^ no implementation for `Props == Props`
  |
  = help: the trait `PartialEq` is not implemented for `Props`, which is required by `<MyComp as yew::Component>::Properties: yew::Properties`
  = help: the following other types implement trait `yew::Properties`:
            Props
            ContextProviderProps<T>
            ChildrenProps
            SuspenseProps
            ()
  = note: required for `<MyComp as yew::Component>::Properties` to implement `yew::Properties`
note: required by a bound in `yew::Component::Properties`
 --> $WORKSPACE/packages/yew/src/html/component/mod.rs
  |
  |     type Properties: Properties;
  |                      ^^^^^^^^^^ required by this bound in `Component::Properties`
help: consider annotating `Props` with `#[derive(PartialEq)]`
  |
4   + #[derive(PartialEq)]
5   | struct Props {}
    |

error[E0277]: the trait bound `Vec<_>: yew::Properties` is not satisfied
  --> tests/props_macro/resolve-prop-fail.rs:29:17
   |
29 |     yew::props!(Vec<_> {});
   |                 ^^^^^^ the trait `yew::Properties` is not implemented for `Vec<_>`
   |
   = help: the following other types implement trait `yew::Properties`:
             Props
             ContextProviderProps<T>
             ChildrenProps
             SuspenseProps
             ()

error[E0277]: the trait bound `Vec<_>: yew::Properties` is not satisfied
  --> tests/props_macro/resolve-prop-fail.rs:29:17
   |
29 |     yew::props!(Vec<_> {});
   |                 ^^^ the trait `yew::Properties` is not implemented for `Vec<_>`
   |
   = help: the following other types implement trait `yew::Properties`:
             Props
             ContextProviderProps<T>
             ChildrenProps
             SuspenseProps
             ()

error[E0277]: the trait bound `MyComp: yew::Properties` is not satisfied
  --> tests/props_macro/resolve-prop-fail.rs:30:17
   |
30 |     yew::props!(MyComp {});
   |                 ^^^^^^ the trait `yew::Properties` is not implemented for `MyComp`
   |
   = help: the following other types implement trait `yew::Properties`:
             Props
             ContextProviderProps<T>
             ChildrenProps
             SuspenseProps
             ()

error[E0277]: the trait bound `MyNotAComponent: yew::Component` is not satisfied
  --> tests/props_macro/resolve-prop-fail.rs:31:17
   |
31 |     yew::props!(MyNotAComponent::Properties {});
   |                 ^^^^^^^^^^^^^^^ the trait `yew::Component` is not implemented for `MyNotAComponent`
   |
   = help: the following other types implement trait `yew::Component`:
             MyComp
             ContextProvider<T>
